istio/old/helm/sample/test-1/hello-vs.yaml
apiVersion: networking.istio.io/v1
kind: VirtualService
metadata:
  name: hello-vs
spec:
  hosts:
    - "hello-svc.default.svc.cluster.local"
  http:
    - match:
      - uri:
          prefix: /v2
      route:
      - destination:
          host: "hello-svc-v2.default.svc.cluster.local"
    - route:
      - destination:
          host: "hello-svc-v1.default.svc.cluster.local"
